<resources>
    <string name="app_name">SGAlert</string>
    <string name="ingresar">Ingresar</string>
    <string name="marca">SGAlert</string>
    <string name="ingresa_tu_usuario">Ingresa tu usuario</string>
    <string name="ingresa_tu_contrase_a">Ingresa tu contraseña</string>
    <string name="o_ingresa_con">o ingresa con</string>
    <string name="llamar_a_emergencias">Llamar a emergencias 🚑</string>
    <string name="informacion_de_integrantes_del_grupo">Ver informacion de integrantes del grupo 👨‍👩‍👧‍👦</string>
    <string name="ver_registro_de_alertas">Ver registro de alertas 📜</string>
    <string name="datos_del_hogar">Datos del Hogar</string>
    <string name="lectura_actual">Lectura actual de gases</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="direccion">Dirección</string>
    <string name="correo">Correo</string>
    <string name="telefono">Teléfono</string>
    <string name="contactarse">Contactarse</string>
    <string name="_9_2999_3489">9 2999 3489 📲</string>
    <string name="phone">📲</string>
    <string name="_50">50%</string>
    <string name="co">CO</string>
    <string name="_23_32">23:32</string>
    <string name="_21_03_24">21/03/24</string>
    <string name="_70">70%</string>
    <string name="_09_10">09:10</string>
    <string name="_22_03_24">22/03/24</string>
    <string name="_65">65%</string>
    <string name="_10_20">10:20</string>
    <string name="_28_03_24">28/03/24</string>
    <string name="_60">60%</string>
    <string name="_22_39">22:39</string>
    <string name="_29_03_24">29/03/24</string>
    <string name="rango">Rango</string>
    <string name="gas">Gas</string>
    <string name="hora">Hora</string>
    <string name="fecha">Fecha</string>
    <string name="juan">Juan</string>
    <string name="perez">Perez</string>
    <string name="calle_siempre_viva_s_n">calle siempre viva s/n</string>
    <string name="juanpe_gmail_com">JuanPe@gmail.com</string>
    <string name="todo">TODO</string>
</resources>